--- a/css/styles.css
+++ b/css/styles.css
@@ -2,64 +2,130 @@
         --accent-color: #2196F3;
         --secondary-text-color: #ffffff;}
 
-body {background-color: #e5e5e5; color: var(--primary-text-color);}
+body {background-color: #e5e5e5;
+         color: var(--primary-text-color);
+         font-family: Roboto, sans-serif; 
+         font-style: normal;
+         font-weight: 400;}
 
 
-/* header*/
+                /* header*/
 
 .page-header {background-color: #ffffff; }
-
-
-.site-nav a {color: var(--primary-text-color);}
- 
+.page-header .logo { font-family:Raleway ;
+                        font-weight: 700;
+                        font-size: 26px;
+                        line-height: 1.2;
+                        letter-spacing: 0.03em;}
+.page-header .accent {color: var(--accent-color);}
+.page-header .studio { color: var(--primary-text-color);}
+.site-nav .link {color: var(--primary-text-color);
+                font-weight: 500;
+                font-size: 14px;
+                line-height: 1.14;}
 .link:focus, .link:hover { color: var(--accent-color) ;}
 
-.auth-nav a {color: #757575;}
+.auth-nav a {color: #757575;
+                font-weight: 500;
+                font-size: 14px;
+                line-height: 1.14;}
 .auth-nav a:hover, .auth-nav a:focus { color: var(--accent-color);}
 
-/*hero*/
+
+                /*hero*/
 
 .hero-section {background-color: #2F303A;}
 
-.hero-title {color: var(--secondary-text-color);}
-.hero-button {background-color: var(--accent-color);
-            color: var(--secondary-text-color);}
-
+.hero-title {color: var(--secondary-text-color);
+                font-weight: 900;
+                font-size: 44px;
+                line-height: 1.36;
+                text-align: center;}
+ .hero-button {background-color: var(--accent-color);
+                color: var(--secondary-text-color);
+                font-weight: 700;
+                font-size: 16px;
+                line-height: 1.88;
+                text-align: center;}
            
             /*benefits*/
 
-     .title {color: var(--primary-text-color);}    
-     .text {color: #757575;}   
+ .benefits-section .title {color: var(--primary-text-color);
+                font-weight: 700;
+                font-size: 14px;
+                line-height: 1.14;}    
+ .benefits-section  .text {color: #757575;
+                font-size: 14px;
+                line-height: 1.71;}   
 
     
     
             /*what we do*/
 
-
+.work-section .title {font-family: 'Roboto';
+                        font-style: normal;
+                        font-weight: 700;
+                        font-size: 36px;
+                        line-height: 1.17;
+                        text-align: center;}
 
              /*our team*/
 
 
 .team-section { background-color: #F5F4FA;}
-.position {color: #757575;}
+.team-section .title {font-weight: 700;
+                font-size: 36px;
+                line-height: 1.17;
+                text-align: center;}
+.team-section .name { font-weight: 500;
+                        font-size: 16px;
+                        line-height: 1.19;
+                        text-align: center;}
+ .position {color: #757575;
+                font-size: 16px;
+                line-height: 1.19;
+                text-align: center;}
 
-           
+
 
             /*footer*/
 
 .footer-section {background-color: #2F303A;}
+.footer-section .logo {font-family: Raleway;
+                        font-weight: 700;
+                        font-size: 26px;
+                        line-height: 1.19;
+                        letter-spacing: 0.03em;}
+.footer-section .accent {color: var(--accent-color);}
+.footer-section .studio { color: var(--secondary-text-color);}
 
-.adress { color: var(--secondary-text-color);}
-.mail {color: rgba(255, 255, 255, 0.6);}
-.telephone {color: rgba(255, 255, 255, 0.6);}
+.adress { color: var(--secondary-text-color);
+        font-size: 14px;
+        line-height: 1.71;}
+.mail {color: rgba(255, 255, 255, 0.6);
+        font-size: 14px;
+        line-height: 1.71;}
+.telephone {color: rgba(255, 255, 255, 0.6);
+                font-size: 14px;
+                line-height: 1.71;}
 
 
             /* portfolio*/
 
 .portfolio-section { background-color: #e5e5e5;}
-.port-button {background-color: #F5F4FA;}
+.port-button {background-color: #F5F4FA;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.62;
+        text-align: center;}
 .port-button:hover, .port-button:focus { background-color: var(--accent-color); color: var(--secondary-text-color);}
-.text {color: #757575;}
+.our-projects .title { font-weight: 700;
+                        font-size: 18px;
+                        line-height: 2;}
+
+.our-projects .text {color: #757575;
+        font-size: 16px;
+        line-height: 1.88;}
 
 
 
