--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@ body {background-color: #e5e5e5;
          font-style: normal;
          font-weight: 400;}
 
+.list { list-style: none;}
+
 
                 /* header*/
 
@@ -23,6 +25,7 @@ body {background-color: #e5e5e5;
                 font-weight: 500;
                 font-size: 14px;
                 line-height: 1.14;}
+.site-nav .link.current {color: var(--accent-color);}
 .link:focus, .link:hover { color: var(--accent-color) ;}
 
 .auth-nav a {color: #757575;
@@ -61,7 +64,7 @@ body {background-color: #e5e5e5;
     
     
             /*what we do*/
-
+.work-section 
 .work-section .title {font-family: 'Roboto';
                         font-style: normal;
                         font-weight: 700;
@@ -90,7 +93,8 @@ body {background-color: #e5e5e5;
 
             /*footer*/
 
-.footer-section {background-color: #2F303A;}
+.footer-section {background-color: #2F303A;
+                }
 .footer-section .logo {font-family: Raleway;
                         font-weight: 700;
                         font-size: 26px;
@@ -101,7 +105,8 @@ body {background-color: #e5e5e5;
 
 .adress { color: var(--secondary-text-color);
         font-size: 14px;
-        line-height: 1.71;}
+        line-height: 1.71;
+        font-style: inherit;}
 .mail {color: rgba(255, 255, 255, 0.6);
         font-size: 14px;
         line-height: 1.71;}
