--- a/css/styles.css
+++ b/css/styles.css
@@ -2,37 +2,48 @@
         --accent-color: #2196F3;
         --secondary-text-color: #ffffff;}
 
-body {background-color: #e5e5e5;
+body {background-color:var(--secondary-text-color);
          color: var(--primary-text-color);
          font-family: Roboto, sans-serif; 
          font-style: normal;
-         font-weight: 400;}
+         font-weight: 400;
+        }
 
-.list { list-style: none;}
+.list { list-style: none; 
+        text-decoration: none;}
+
+
+
+
 
 
                 /* header*/
 
-.page-header {background-color: #ffffff; }
 .page-header .logo { font-family:Raleway ;
                         font-weight: 700;
                         font-size: 26px;
                         line-height: 1.2;
-                        letter-spacing: 0.03em;}
-.page-header .accent {color: var(--accent-color);}
-.page-header .studio { color: var(--primary-text-color);}
-.site-nav .link {color: var(--primary-text-color);
-                font-weight: 500;
-                font-size: 14px;
-                line-height: 1.14;}
-.site-nav .link.current {color: var(--accent-color);}
-.link:focus, .link:hover { color: var(--accent-color) ;}
+                        letter-spacing: 0.03em; }
 
-.auth-nav a {color: #757575;
+.page-header .web {color: var(--accent-color);}
+.page-header .studio { color: var(--primary-text-color);}
+
+.site-nav-link {color: var(--primary-text-color);
                 font-weight: 500;
                 font-size: 14px;
                 line-height: 1.14;}
-.auth-nav a:hover, .auth-nav a:focus { color: var(--accent-color);}
+
+.site-nav-link.current,
+.site-nav-link:focus, 
+.site-nav-link:hover { color: var(--accent-color) ;}
+
+.auth-nav-link {color: #757575;
+                font-weight: 500;
+                font-size: 14px;
+                line-height: 1.14; }
+
+.auth-nav-link:hover,
+.auth-nav-link:focus { color: var(--accent-color);}
 
 
                 /*hero*/
@@ -43,9 +54,13 @@ body {background-color: #e5e5e5;
                 font-weight: 900;
                 font-size: 44px;
                 line-height: 1.36;
+                text-transform: uppercase;
                 text-align: center;}
- .hero-button {background-color: var(--accent-color);
+
+.hero-button {  background-color: var(--accent-color);
                 color: var(--secondary-text-color);
+                font-family: Roboto;
+                font-style: normal;    
                 font-weight: 700;
                 font-size: 16px;
                 line-height: 1.88;
@@ -53,21 +68,21 @@ body {background-color: #e5e5e5;
            
             /*benefits*/
 
- .benefits-section .title {color: var(--primary-text-color);
+ .benefit-title {color: var(--primary-text-color);
                 font-weight: 700;
                 font-size: 14px;
-                line-height: 1.14;}    
- .benefits-section  .text {color: #757575;
+                line-height: 1.14;
+                text-transform: uppercase;}    
+
+ .benefit-text {color: #757575;
                 font-size: 14px;
                 line-height: 1.71;}   
 
     
     
             /*what we do*/
-.work-section 
-.work-section .title {font-family: 'Roboto';
-                        font-style: normal;
-                        font-weight: 700;
+
+.work-title {           font-weight: 700;
                         font-size: 36px;
                         line-height: 1.17;
                         text-align: center;}
@@ -76,10 +91,12 @@ body {background-color: #e5e5e5;
 
 
 .team-section { background-color: #F5F4FA;}
-.team-section .title {font-weight: 700;
+
+.team-title {font-weight: 700;
                 font-size: 36px;
                 line-height: 1.17;
                 text-align: center;}
+
 .team-section .name { font-weight: 500;
                         font-size: 16px;
                         line-height: 1.19;
@@ -93,37 +110,60 @@ body {background-color: #e5e5e5;
 
             /*footer*/
 
-.footer-section {background-color: #2F303A;
-                }
+.footer-section {background-color: #2F303A;}
+
+
 .footer-section .logo {font-family: Raleway;
                         font-weight: 700;
                         font-size: 26px;
                         line-height: 1.19;
                         letter-spacing: 0.03em;}
-.footer-section .accent {color: var(--accent-color);}
+.footer-section .web {color: var(--accent-color);}
 .footer-section .studio { color: var(--secondary-text-color);}
 
-.adress { color: var(--secondary-text-color);
-        font-size: 14px;
-        line-height: 1.71;
-        font-style: inherit;}
-.mail {color: rgba(255, 255, 255, 0.6);
-        font-size: 14px;
-        line-height: 1.71;}
-.telephone {color: rgba(255, 255, 255, 0.6);
+.mail,
+.telephone {font-family: inherit;
+                font-style:normal;
+                text-decoration: none;
+                        color: rgba(255, 255, 255, 0.6);
+                        font-size: 14px;
+                        line-height: 1.71;}
+
+.address { color: var(--secondary-text-color); 
+                font-family: inherit;
+                font-style: normal;
+                text-decoration: none;
+                font-weight: 400;
                 font-size: 14px;
-                line-height: 1.71;}
+                line-height: 1.71px; }
+
+
 
 
             /* portfolio*/
 
-.portfolio-section { background-color: #e5e5e5;}
-.port-button {background-color: #F5F4FA;
+.main-button {
+        background-color: #F5F4FA;
+        color: var(--primary-text-color);
+        font-family: Roboto;
+        font-style: normal;
         font-weight: 500;
         font-size: 16px;
         line-height: 1.62;
         text-align: center;}
-.port-button:hover, .port-button:focus { background-color: var(--accent-color); color: var(--secondary-text-color);}
+.main-button:hover,
+.main-button:focus { background-color: var(--accent-color); 
+                        color: var(--secondary-text-color);}
+
+.selected-button {background-color: var(--accent-color);
+                        color: var(--secondary-text-color);
+                        font-family: Roboto;
+                        font-style: normal;
+                        font-weight: 500;
+                        font-size: 16px;
+                        line-height: 1.62;
+                        text-align: center; }
+                        
 .our-projects .title { font-weight: 700;
                         font-size: 18px;
                         line-height: 2;}
